--- a/about.html
+++ b/about.html
@@ -48,33 +48,35 @@
             <div class="container">
                 <div class="contained animated fadeInLeftBig">
                     <h2 class="rouge">Découvrez l'entreprise</h2>
-                    <p>NOIHSE (Nouvelle Organisation Industrielle en Hygiène Sécurité et Environnement) est une société spécialisée dans
-                        les domaines du <span>Nettoyage et Entretien industriel</span> et de la <span>Conception Visuelle</span></p>
-                    <p>La compétence, le professionnalisme, la rigueur et le sérieux de ses dirigeants est ce qui caractérise le mieux
-                        l'entreprise. Car tous sont issus d'une formation de qualiticien</p>
+                    <p>NOIHSE (Nouvelle Organisation Industrielle en Hygiène Sécurité et Environnement) est une société spécialisée
+                        dans les domaines du <span>Nettoyage et Entretien industriel</span> et de la <span>Conception Visuelle.</span></p>
+                    <p>La compétence, le professionnalisme, la rigueur et le sérieux de ses dirigeants est ce qui caractérise
+                        le mieux l'entreprise. Car tous sont issus d'une formation de qualiticien.</p>
                     <div class="contained">
-                        Qui pourrait parler de nettoyage sans avoir de notions en qualité. Nous avons connaissance des normes ISO 90001, OHSAS 18001, ISO 14001, ISO 22000. <br><br>Ces connaissances sont des pérogatives
-                        pour garantir un niveau d'hygiène et de sécurité satisfaisant à votre structure. Les exigences de ces normes étant
-                        connues nous vous garantissons un standard. Le programme de nettoyage et désinfection de l'entreprise vise à
-                        ce que le sol, les murs, les plafonds, les vitres, l'ambiance des salles de travail, le matériel et les appareils
-                        utilisés pour le travail soient maintenus en bon état de propreté. Un environnement propre évite de constituer
-                        une source de contammination pour le personnel et le client. Une main d'oeuvre qualifiée et professionnelle est
-                        l'atout de notre équipe.
+                        Qui pourrait parler de nettoyage sans avoir de notions en qualité. Nous avons connaissance des normes ISO 90001, OHSAS 18001,
+                        ISO 14001, ISO 22000. <br><br>Ces connaissances sont des pérogatives pour
+                        garantir un niveau d'hygiène et de sécurité satisfaisant à votre structure. Les exigences de ces
+                        normes étant connues nous vous garantissons un standard. Le programme de nettoyage et désinfection
+                        de l'entreprise vise à ce que le sol, les murs, les plafonds, les vitres, l'ambiance des salles de
+                        travail, le matériel et les appareils utilisés pour le travail soient maintenus en bon état de propreté.
+                        Un environnement propre évite de constituer une source de contammination pour le personnel et le
+                        client. Une main d'oeuvre qualifiée et professionnelle est l'atout de notre équipe.
                     </div>
                 </div>
                 <div class="mission-section animated fadeInRightBig">
                     <h2 class="rouge">Nos missions</h2>
                     <p>
-                        NOIHSE est spécialisée dans les domaines : <br><br> - de la <a href="services.html#pack1" style="color:#000;text-decoration:underline;">conception visuelle des mesures de sensibilisations en hygiène, sécurité
-                        et environnement </a><br><br> - de l’<a href="services.html#pack3" style="color:#000;text-decoration:underline;">entretien de toutes surfaces et surtout une maitrise de l’entretien en industrie agro-alimentaire</a>
-                        <br><br>
-                        Les axes principaux ci-dessus renferment : <br><br>- la création d’animation vidéo pour des conférences, des
-                        cérémonies ; la confection d’affiches (micro perforé, vinyle, Kakemono) , de badges et une aide à la créativité
-                        et à la couverture médias surtout des évènements en entreprise, des séminaires, des ateliers etc <br><br>
-                        - l’entretien en hauteur et des sols , des usines de café- cacao , de noix de cajou ( anacarde) ; le pest control
-                        , la désinsectisation. NOIHSE est constituée d’une équipe dynamique regroupant plusieurs disciplines. Dans l’attente
-                        d’une réponse favorable à notre offre, veuillez croire, Monsieur le Directeur Général, en l’expression de mes
-                        salutations distinguées.
+                        NOIHSE est spécialisée dans les domaines : <br><br> - de la <a href="services.html#pack1" style="color:#000;text-decoration:underline;">conception
+                            visuelle des mesures de sensibilisations en hygiène, sécurité et environnement </a><br><br> -
+                        de l’<a href="services.html#pack3" style="color:#000;text-decoration:underline;">entretien de toutes
+                            surfaces et surtout une maitrise de l’entretien en industrie agro-alimentaire</a>
+                        <br><br> Les axes principaux ci-dessus renferment : <br><br>- la création d’animation vidéo pour
+                        des conférences, des cérémonies ; la confection d’affiches (micro perforé, vinyle, Kakemono) , de
+                        badges et une aide à la créativité et à la couverture médias surtout des évènements en entreprise,
+                        des séminaires, des ateliers etc <br><br> - l’entretien en hauteur et des sols , des usines de café-
+                        cacao , de noix de cajou ( anacarde) ; le pest control , la désinsectisation. NOIHSE est constituée
+                        d’une équipe dynamique regroupant plusieurs disciplines. Dans l’attente d’une réponse favorable à
+                        notre offre, veuillez croire, Monsieur le Directeur Général, en l’expression de mes salutations distinguées.
 
                     </p>
                 </div>
@@ -87,48 +89,49 @@
         <section class="partenaires">
             <h2 class="rouge animated fadeInUp">Ils continuent de nous faire confiance</h2>
             <style type="text/css">
-                section.partenaires .container{
+                section.partenaires .container {
                     display: flex;
                     flex-direction: row;
                     flex-wrap: nowrap;
                 }
-                section.partenaires .container .block{
+
+                section.partenaires .container .block {
                     flex-basis: 20%;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
                 }
-                section.partenaires .container .block img{
+
+                section.partenaires .container .block img {
                     width: 100%;
                     height: auto;
                 }
-                section.partenaires .container .block .text{
 
-                }
+                section.partenaires .container .block .text {}
             </style>
             <div class="container animated zoomIn">
                 <div class="block">
-                  <img src="img/logo/casa.gif" style="width:60%">
-                  <!-- <div class="text">Société Cajou des savanes CASA </div> -->
+                    <img src="img/logo/casa.gif" style="width:60%">
+                    <!-- <div class="text">Société Cajou des savanes CASA </div> -->
                 </div>
                 <div class="block">
-                  <img src="img/logo/bollore.png" style="width:60%">
-                  <!-- <div class="text">Bolloré Africa Logistique</div> -->
-                </div>
-
-                <div class="block">
-                  <img src="img/logo/awahus.png" style="width:60%">
-                  <!-- <div class="text">AWAHUS SERVICE</div> -->
+                    <img src="img/logo/bollore.png" style="width:60%">
+                    <!-- <div class="text">Bolloré Africa Logistique</div> -->
                 </div>
 
                 <div class="block">
-                  <img src="img/logo/foragri.png" style="width:60%">
-                  <!-- <div class="text">FORAGRI</div> -->
+                    <img src="img/logo/awahus.png" style="width:60%">
+                    <!-- <div class="text">AWAHUS SERVICE</div> -->
+                </div>
+
+                <div class="block">
+                    <img src="img/logo/foragri.png" style="width:60%">
+                    <!-- <div class="text">FORAGRI</div> -->
                 </div>
                 <div class="block">
-                  <img src="img/logo/olam.jpg" style="width:60%">
-                  <!-- <div class="text">OLAM Cocoa Precessing</div> -->
+                    <img src="img/logo/olam.jpg" style="width:60%">
+                    <!-- <div class="text">OLAM Cocoa Precessing</div> -->
                 </div>
             </div>
         </section>
