--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 
+    <!-- Bootstrap 4 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+
     <link rel="stylesheet" href="css/slider.css">
     <script src="js/slider.js"></script>
 
@@ -48,7 +56,7 @@
                         <div class="caption-overlay">
                             <h1 class="rouge" style="text-align:left;">Création Visuelle</h1>
                             <p>
-                                Passez vos messages et informations sur des affiches, flyers dans le format de votre souhait en quantité illimitée
+                                Passez vos messages et informations sur des affiches, flyers dans le format de votre choix en quantité illimitée
                             </p>
                             <a href="#pack1" class="button">
                                 <span>Voir plus</span>
@@ -62,7 +70,7 @@
                     <div class="caption animated fadeInDown">
                         <h1 class="rouge" style="text-align:left;">Développement Web</h1>
                         <p>
-                            Faites connaitre votre entreprise et Elargissez votre portée à l'international avec des sites web dynamiques et attrayants
+                            Faites connaitre votre entreprise et élargissez votre portée à l'international avec des sites web dynamiques et attrayants
                             !
                         </p>
                         <a href="#pack3" class="button">
@@ -74,13 +82,13 @@
             <div class="slide" id="slide3">
                 <div class="slide-overlay">
                     <div class="caption animated fadeInDown">
-                        <h1 class="rouge" style="text-align:left;">Hygiène et Sécurité Environnement</h1>
+                        <h1 class="rouge" style="text-align:left;">Hygiène Sécurité et Environnement</h1>
                         <p>
                             Redonnez à votre environnement son éclat, nous vous proposons un service de nettoyage et entretien de qualité ! Besoin d'un
                             nettoyage rapide et efficace de vos locaux ?
                         </p>
                         <a href="#pack4" class="button">
-                            <span>Conatactez-nous !</span>
+                            <span>Contactez-nous !</span>
                         </a>
                     </div>
                 </div>
@@ -90,10 +98,13 @@
     <!-- Nos mission -->
     <div class="mission-section">
         <div class="container white-bg upper">
-            <h2 class="rouge animated slideInLeft">Nouvelle Organisation Industrielle en Hygiène Sécurité et Environnement (NOIHSE)</h2>
+            <h2 class="rouge animated slideInLeft">Nouvelle Organisation Industrielle en Hygiène Sécurité et Environnement
+                (NOIHSE)
+            </h2>
             <div style="text-transform: uppercase;" class=" animated fadeIn">
-                Apporter à nos clients des services de qualité en vue d'optimiser leur productivité et d'améliorer leur environnement de travail est notre mission
-            </div >
+                Apporter à nos clients des services de qualité en vue d'optimiser leur productivité et d'améliorer leur environnement de
+                travail est notre mission
+            </div>
             <a href="about.html" class="button animated zoomIn" style="margin-top: 20px;">
                 <span>Découvrez NOIHSE</span>
             </a>
