--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                     <h2 class="rouge">Découvrez l'entreprise</h2>
                     <p>NOIHSE (Nouvelle Organisation Industrielle en Hygiène Sécurité et Environnement) est une société spécialisée
                         dans les domaines du <span>Nettoyage et Entretien industriel</span> et de la <span>Conception Visuelle.</span></p>
-                    <p>La compétence, le professionnalisme, la rigueur et le sérieux de ses dirigeants est ce qui caractérise
+                    <p>La compétence, le professionnalisme, la rigueur et le sérieux de ses dirigeants sont ce qui caractérise
                         le mieux l'entreprise. Car tous sont issus d'une formation de qualiticien.</p>
                     <div class="contained">
                         Qui pourrait parler de nettoyage sans avoir de notions en qualité. Nous avons connaissance des normes ISO 90001, OHSAS 18001,
